# thermal_sim

./: .gitignore  README.md  SHADOW_OPTIMIZATION.md  pytest.ini  requirements.txt  run_simulation.py
configs/: README.md
configs/examples/: config_with_objects.yaml  depth_varying_demo.yaml  desert_diurnal.yaml  enhanced_viz_example.yaml  legacy_materials_demo.yaml  lunar_regolith_demo.yaml  rocky_ridge_2d.yaml  rocky_terrain_2d.yaml  shadow_study.yaml  test_objects.yaml  test_objects_from_file.yaml  urban_objects_demo.yaml
cpp_api/: CMakeLists.txt  DOWNSTREAM_USAGE.md  README.md
cpp_api/cmake/: README.md  materials_database_config.cmake.in
cpp_api/examples/: example_accessors.cpp  example_usage.cpp
cpp_api/include/: materials_db.hpp  materials_db_accessors.hpp
cpp_api/src/: materials_db.cpp
data/materials/: materials.db  representative_materials.json
data/objects/: example_objects.csv
docs/: CHANGELOG.md  DAILY_LOG.md  DEPTH_VARYING_IMPLEMENTATION.md  ENHANCED_VISUALIZATION_GUIDE.md  OBJECT_THERMAL_GUIDE.md  README.md  REORGANIZATION_COMPLETE.md  SETUP_GUIDE.md  SOLAR_ALGORITHMS.md  TESTING.md  TESTING_SUMMARY.md  TONIGHT_SUMMARY.md  VISUALIZATION_COMPLETE.md  material_database_ideas.md  materials_database.md  project_status.md  solver_algorithms.md
docs/archive/bugfixes/: SOLAR_BUGFIX.md
docs/archive/discussions/: material_classification_design.md
docs/archive/implementation-notes/: OBJECT_MODULE_COMPLETE.md  SOLAR_MODULE_COMPLETE.md
docs/development/: VISUALIZATION_README.md
docs/technical/: ATMOSPHERE_ALGORITHMS.md  cpp_api_overview.md
docs/user-guide/: OBJECT_QUICK_REFERENCE.md  configuration.md
examples/: 01_basic_setup.py  02_visualization_demo.py  03_solar_demo.py  04_atmosphere_demo.py  05_solver_demo.py
scripts/: README.md  create_materials_database.py
src/: __init__.py  atmosphere.py  config.py  materials.py  materials_db.py  object_thermal.py  objects.py  output_manager.py  runner.py  solar.py  solver.py  terrain.py  visualization.py  visualization_enhanced.py
tests/: README.md  TEST_STATUS.md
